---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var a : array 1 .. 2 of int\nfor : a end for\n"
---
"a"@(FileId(1), 4..5) [ConstVar(Var, No)]: array ( range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), Yes)), ) of int
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 34..35): unsupported operation
| error for (FileId(1), 34..35): for-each loops are not implemented yet
